# cpp-commons

./: .clang-format  .clang-tidy  CLAUDE.md  CMakeLists.txt  Makefile  README.md  meson.build  meson.options
.github/workflows/: ci.yml
cmake/: CompilerWarnings.cmake  Coverage.cmake  Dependencies.cmake  Sanitizers.cmake  commonsConfig.cmake.in
data/: iconify-mdi.json
docs/: Doxyfile.in
examples/: CMakeLists.txt  color.cpp  display_info.cpp  flag.cpp  hello.cpp  icon.cpp  id.cpp  json_integration.cpp  meson.build  origin.cpp  prioritized.cpp  semver.cpp
examples/consumers/fetch_content/: CMakeLists.txt  README.md  main.cpp
include/commons/: color.hpp  commons.hpp  config.hpp  display_info.hpp  fixed_string.hpp  flag.hpp  icon.hpp  icons.hpp  id.hpp  json.hpp  literals.hpp  meson.build  origin.hpp  prioritized.hpp  semver.hpp  types.hpp  version.hpp.in  version_constraint.hpp
include/commons/icons/: mdi.hpp
scripts/: generate_mdi_icons.py
subprojects/: ulid.wrap
tests/: CMakeLists.txt  meson.build  test_color.cpp  test_commons.cpp  test_display_info.cpp  test_fixed_string.cpp  test_flag.cpp  test_icon.cpp  test_id.cpp  test_json.cpp  test_literals.cpp  test_origin.cpp  test_prioritized.cpp  test_semver.cpp  test_types.cpp  test_version_constraint.cpp
